# Svit

./: .gitignore  AUTHORS.md  CMakeLists.txt  FreeBSD.ninja  Gentoo.ninja  LICENSE  LICENSE.md  OS_X.ninja  README.md  build.ninja  core.ninja  main.cpp
doc/: arch.tex
geom/: operations.h  point.h  ray.cpp  ray.h  vector.h
image/: formats.h  image.h
src/: a.out  main.cpp
src/camera/: camera.h  perspective.cpp  perspective.h
src/color/: rgb.h
src/engine/: cosine_debugger.cpp  cosine_debugger.h  engine.cpp  engine.h  ray_casting.cpp  ray_casting.h  ray_tracing.cpp  ray_tracing.h
src/geom/: axis.h  bounding_box.cpp  bounding_box.h  matrix.h  operations.h  point.h  ray.cpp  ray.h  rect.h  rectangle.cpp  rectangle.h  vector.h
src/image/: image.cpp  image.h
src/light/: ambient.cpp  ambient.h  directional.cpp  directional.h  light.h  point.cpp  point.h  spot.cpp  spot.h
src/material/: lambertian.cpp  lambertian.h  material.h  mirror.cpp  mirror.h  phong.cpp  phong.h
src/math/: interpolation.h  numeric.cpp  numeric.h
src/model/: model.cpp  model.h  obj.cpp  obj.h
src/node/: instance.cpp  instance.h  intersection.h  node.h
src/renderer/: renderer.cpp  renderer.h  settings.cpp  settings.h  simple.cpp  simple.h
src/supersampling/: random.cpp  random.h  supersampling.h  zero.cpp  zero.h
src/texture/: checkerboard.cpp  checkerboard.h  constant.cpp  constant.h  marble_perlin_noise.cpp  marble_perlin_noise.h  perlin_noise.cpp  perlin_noise.h  texture.h  wood_perlin_noise.cpp  wood_perlin_noise.h
src/trajectory/: bspline.cpp  bspline.h  trajectory.h
(+42 files in other folders)
